# resume-generator

./: .gitignore  README.md  pyproject.toml
src/builders/: resume_builder.py
src/builders/templates/: resume_template.tex
src/coordination/: coordination_pipeline.py  coordination_strategy.py  retry_decorator.py
src/coordination/strategies/: local_coordination_strategy.py
src/interface/: cli.py  manager.py
src/llm_wrappers/: llm_providers.py
src/models/: applicant_profile.py  application_data.py  data_factory.py
src/modules/: applicant_loader.py  applicant_parser_module.py  application_loader.py  application_parser_module.py  cover_letter_builder_module.py  pdf_generator_module.py  resume_builder_module.py
src/modules/applicant_parser/: applicant_builder.py
src/modules/application_parser/: application_parser.py
src/modules/cover_letter_builder/: cover_letter_builder.py
src/modules/pdf_generator/: latex_to_pdf.py
src/modules/resume_builder/: resume_builder.py
src/parsers/: applicant_builder.py
src/persistance/: applicant_repository.py  application_repository.py  utils.py
src/utils/: latex_to_pdf.py
tests/: conftest.py  test_application_parser.py  test_data_factory.py  test_models.py
tests/applicant_data/: test_applicant.pkl
tests/integration/: conftest.py  test_applicant_builder.py  test_application_parser.py  test_cover_letter_builder.py  test_llm_provider.py  test_manager.py  test_resume_builder.py
tests/unit/: conftest.py  test_applicant_builder.py  test_latex_to_pdf.py  test_resume_builder.py
tests/unit/coordination/: conftest.py  (+1 more)
(+12 files in other folders)
