[tool.poetry]
name = "applicationpipeline"
version = "0.1.0"
description = ""
authors = ["David <drajnoha@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
openai = "^1.63.2"
pytest-env = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
